2nd Commit: -Added Database Model, Migrations. -Deleted Unit Test Objects.
Notes:
1st Commit:
-Created Onion Architecture base project.
-Created Unit Test Objects.

--- a/Presentation/ECommerceAPI.API/appsettings.json
+++ b/Presentation/ECommerceAPI.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostgreSQl": "User ID=postgres;Password=123456;Host=localhost;Port=5432;Database=ECommerceAPIDb;" //With this code, We do not need to add connection string everywhere anymore.
+  }
 }
