--- a/Core/ECommerceAPI.Application/ECommerceAPI.Application.csproj
+++ b/Core/ECommerceAPI.Application/ECommerceAPI.Application.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Abstractions\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
+  </ItemGroup>
+
 </Project>
